# merchant-sales-pipeline

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
billups_challenge/: config.py  ingestion.py  main.py  questions.py  report.py  session.py
tests/: conftest.py  test_ingestion.py  test_main.py  test_questions.py
